--- a/package.json
+++ b/package.json
@@ -4,5 +4,20 @@
   "main": "index.js",
   "repository": "git@github.com:rakibul-dev/devs-job-copilot-server.git",
   "author": "rakibul-dev <mdrakibul.dev@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "axios": "^1.6.0",
+    "date-fns": "^2.30.0",
+    "express": "^4.18.2",
+    "node-cron": "^3.0.2",
+    "proxy-chain": "^2.4.0",
+    "puppeteer": "^21.5.0",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-anonymize-ua": "^2.4.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
+    "puppeteer-page-proxy": "^1.3.0"
+  },
+  "scripts": {
+    "dev": "nodemon ./src/index.js"
+  }
 }
