--- a/package.json
+++ b/package.json
@@ -7,9 +7,14 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^1.6.0",
+    "bull": "^4.11.4",
     "date-fns": "^2.30.0",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "ioredis": "^5.3.2",
+    "mongoose": "^8.0.0",
     "node-cron": "^3.0.2",
+    "portscanner": "^2.2.0",
     "proxy-chain": "^2.4.0",
     "puppeteer": "^21.5.0",
     "puppeteer-extra": "^3.3.6",
@@ -18,6 +23,7 @@
     "puppeteer-page-proxy": "^1.3.0"
   },
   "scripts": {
-    "dev": "nodemon ./src/index.js"
+    "dev": "nodemon --inspect ./src/index.js",
+    "start": "node ./src/index.js"
   }
 }
