new packages added

--- a/package.json
+++ b/package.json
@@ -24,6 +24,6 @@
   },
   "scripts": {
     "dev": "nodemon --inspect ./src/index.js",
-    "start": "node ./src/index.js"
+    "start": "node --inspect ./src/index.js"
   }
 }
