--- a/package.json
+++ b/package.json
@@ -6,21 +6,35 @@
   "author": "rakibul-dev <mdrakibul.dev@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@fontsource/roboto": "^5.0.8",
+    "@mui/icons-material": "^5.14.18",
+    "@mui/material": "^5.14.18",
+    "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.6.0",
     "bull": "^4.11.4",
+    "connect-redis": "^7.1.0",
+    "cors": "^2.8.5",
     "date-fns": "^2.30.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "ioredis": "^5.3.2",
     "mongoose": "^8.0.0",
+    "morgan": "^1.10.0",
+    "next-redux-wrapper": "^8.1.0",
     "node-cron": "^3.0.2",
+    "nodemailer": "^6.9.7",
+    "passport": "^0.6.0",
     "portscanner": "^2.2.0",
     "proxy-chain": "^2.4.0",
     "puppeteer": "^21.5.0",
     "puppeteer-extra": "^3.3.6",
     "puppeteer-extra-plugin-anonymize-ua": "^2.4.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2",
-    "puppeteer-page-proxy": "^1.3.0"
+    "puppeteer-page-proxy": "^1.3.0",
+    "react-redux": "^8.1.3",
+    "sendmail": "^1.6.1"
   },
   "scripts": {
     "dev": "nodemon --inspect ./src/index.js",
