--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "puppeteer-extra-plugin-anonymize-ua": "^2.4.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2",
     "puppeteer-page-proxy": "^1.3.0",
+    "random-useragent": "^0.5.0",
     "react-redux": "^8.1.3",
     "sendmail": "^1.6.1"
   },
