--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "puppeteer-extra": "^3.3.6",
     "puppeteer-extra-plugin-anonymize-ua": "^2.4.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2",
+    "puppeteer-extra-plugin-user-preferences": "^2.4.1",
     "puppeteer-page-proxy": "^1.3.0",
     "react-redux": "^8.1.3",
     "sendmail": "^1.6.1"
